fixing overflow

--- a/mobile/static/css/drunkwithme.css
+++ b/mobile/static/css/drunkwithme.css
@@ -2,7 +2,6 @@
         height: 100%;
         margin: 0;
         padding: 0;
-        overflow:hidden;
         font-family:arial,helvetica;
       }
 
